--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -11,37 +11,45 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout your code
+      # Step 1: Checkout your repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Set up Docker Buildx (for multi-platform builds)
+      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Step 3: Build the Docker image for your Spring app
+      # Step 3: Build the Petclinic Docker image
       - name: Build Petclinic Docker image
         run: |
-          echo "Building Docker image..."
+          echo "🛠️ Building Docker image..."
           docker build -t petclinic-app .
 
-      # Step 4: Stop and remove any old containers (clean environment)
+      # Step 4: Stop old containers if any
       - name: Stop old containers
         run: |
-          echo "Stopping and removing old containers..."
+          echo "🧹 Cleaning up previous containers..."
           docker compose -f docker-compose-postgres.yml down -v || true
 
-      # Step 5: Start new containers (PostgreSQL + Spring App)
-      - name: Start containers with docker-compose
+      # Step 5: Start containers with docker-compose
+      - name: Start containers
         run: |
-          echo "Starting containers..."
+          echo "🚀 Starting PostgreSQL + Petclinic..."
           docker compose -f docker-compose-postgres.yml up -d
-          echo "Containers started successfully!"
           docker ps
 
-      # Step 6: Verify that the app is running
-      - name: Check Petclinic health
+      # Step 6: Wait for the app to start (retry logic)
+      - name: Wait and verify app health
         run: |
-          echo "Waiting for the app to start..."
-          sleep 20
-          curl -f http://localhost:8080 || (echo "App did not start!" && exit 1)
+          echo "⏳ Waiting for Petclinic to start..."
+          for i in {1..15}; do
+            if curl -sf http://localhost:8085 > /dev/null; then
+              echo "✅ App is up and reachable on port 8085!"
+              exit 0
+            fi
+            echo "Still waiting... ($i)"
+            sleep 10
+          done
+          echo "❌ App failed to start in time!"
+          docker compose -f docker-compose-postgres.yml logs
+          exit 1
